[tool.poetry]
name = "encode-scripts"
version = "0.0.0"
description = "Vapoursynth scripts"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
vapoursynth = "^65"
dnfunc = "^0.0.5"
pyyaml = "^6.0.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.1"

[tool.poetry.group.runtime.dependencies]
vspreview = "^0.8.1"
numpy = "^1.26.4"

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
line-length = 99
target-version = "py311" # Until Poetry v2

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line
  "PLR0913", # Too many arguments to function call
  #
  "BLE001", # Do not catch blind exception: `Exception`
  "D100",   # Missing docstring in public module
  "D103",   # Missing docstring in public function
  "E402",   # Module level import not at top of file
  "ERA001", # Found commented-out code
  "INP001", # File {filename} is part of an implicit namespace package. Add an __init__.py.
  "T201",   # `print` found
]

[tool.ruff.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 129
max-line-length = 129

[tool.ruff.lint.pydocstyle]
convention = "google"
