[project]
name            = "encode-scripts"
description     = "Vapoursynth scripts"
version         = "0.0.0"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
requires-python = ">=3.13"

dependencies = ["vapoursynth>=72", "dnfunc>=0.2.0", "pyyaml>=6.0.2"]

[dependency-groups]
dev = ["ruff>=0.12.1", "vspreview>=0.13.0", "numpy>=2.3.1"]

[tool.ruff]
line-length        = 99
format.line-ending = "lf"

[tool.ruff.lint]
flake8-annotations.ignore-fully-untyped  = true
flake8-tidy-imports.ban-relative-imports = "all"
pycodestyle.max-doc-length               = 129
pycodestyle.max-line-length              = 149
pydocstyle.convention                    = "google"

select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line
  "PLR0913", # Too many arguments to function call
  #
  "BLE001", # Do not catch blind exception: `Exception`
  "D100",   # Missing docstring in public module
  "D103",   # Missing docstring in public function
  "E402",   # Module level import not at top of file
  "ERA001", # Found commented-out code
  "INP001", # File {filename} is part of an implicit namespace package. Add an __init__.py.
  "T201",   # `print` found
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*"     = ["ANN", "D", "E501", "PLC1901", "PLR2004", "S"]

[tool.pyright]
typeCheckingMode = "off"
